@@ -5,7 +5,8 @@ Changelog
 1.0b33 (unreleased)
 ===================
 
-- Nothing changed yet.
+- Fix bug in git Clone: Directly after cloning there is nothing to merge,
+  so don't attempt to.
 
 
 1.0b32 (2015-01-22)
